--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ gradle build:
   image: gradle:5.5
   variables:
     GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.parallel=true"
-    KOTLIN_VERSION: "1.3.70"
+    KOTLIN_VERSION: "1.3.71"
   script:
     - |
       wget -k "https://github.com/JetBrains/kotlin/releases/download/v$KOTLIN_VERSION/kotlin-compiler-$KOTLIN_VERSION.zip" && \
@@ -28,7 +28,7 @@ gradle build:
     - cd poker-ui-app && gradle npm_install_-g_create-react-kotlin-app && gradle npm_run_build && cd ..
     - cat /home/gradle/.npm/_logs/*.log || true
     - mv poker-ui-app/build main/src/main/resources/public
-    - gradle --build-cache --scan assemble check coverage detekt
+    - gradle --build-cache --scan assemble check coverage detekt --warning-mode all
     - 'cat ''build/reports/jacoco/coverage/html/index.html'' | sed -n ''s/.*Total[^%]*>\([0-9]*%\).*/Coverage: \1/pg'''
   coverage: /Coverage[^0-9]*([0-9]{1,3})%/
   artifacts:
