--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ buildscript {
 plugins {
 	id "jacoco"
 	id "io.gitlab.arturbosch.detekt" version "1.8.0"
-	id "com.moowork.node" version "1.3.1"
+	id("com.github.node-gradle.node") version "2.2.0"
 	id "com.gorylenko.gradle-git-properties" version "2.2.2"
 
 }
@@ -333,10 +333,10 @@ project(":main") {
 }
 
 project(":poker-ui-app") {
-	apply plugin: "com.moowork.node"
+	apply plugin: "com.github.node-gradle.node"
 
 	node {
-		version = "11.6.0"
+		version = "12.16.3"
 		download = true
 	}
 
