--- a/poker-ui-app/package.json
+++ b/poker-ui-app/package.json
@@ -5,12 +5,12 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "@jetbrains/kotlin-extensions": "^1.0.1-pre.83",
-    "axios": "^0.18.0",
-    "create-react-kotlin-app": "^1.0.11",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "axios": "^0.18.1",
     "core-js": "^3.2.0",
-    "kotlin": "^1.3.50"
+    "create-react-kotlin-app": "^1.0.12",
+    "kotlin": "^1.3.50",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "devDependencies": {
     "react-scripts-kotlin": "4.0.1"
