:loud_sound: Add rickroll dependency :loud_sound:

--- a/build.gradle
+++ b/build.gradle
@@ -282,6 +282,7 @@ project(":infra-security") {
 		implementation("com.auth0:java-jwt:3.4.0")
 		implementation("org.springframework.boot:spring-boot-starter-security")
 		implementation("org.springframework.boot:spring-boot-starter-web")
+		implementation("be.tomcools:rickroll-security-spring-boot-starter:1.1.0")
 
 		implementation project(":domain")
 		implementation project(":vocabulary")
