--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
 	ext {
-		kotlinVersion = "1.3.71"
-		springBootVersion = "2.3.0.RELEASE"
+		kotlinVersion = "1.4.0"
+		springBootVersion = "2.3.3.RELEASE"
 		junitVersion = "5.6.2"
 	}
-    ext["kotlin.version"] = "1.3.71"
+    ext["kotlin.version"] = "1.4.0"
 
     repositories {
 		mavenCentral()
@@ -116,7 +116,7 @@ configure(kotlinModules) {
 	}
 
 	ext {
-		springBootVersion = "2.3.0.RELEASE"
+		springBootVersion = "2.3.3.RELEASE"
 		junitVersion = "5.3.2"
 	}
 
@@ -224,6 +224,10 @@ project(":app") {
 		implementation project(":app-api")
 		implementation project(":domain")
 		implementation project(":vocabulary")
+
+		testImplementation("io.kotest:kotest-runner-junit5-jvm:4.2.0")
+		testImplementation("io.kotest:kotest-assertions-core-jvm:4.2.0")
+		testImplementation("io.kotest:kotest-property-jvm:4.2.0")
 	}
 }
 
@@ -232,10 +236,10 @@ project(":infra-graphql") {
 	dependencies {
 		implementation("org.springframework.boot:spring-boot-starter-websocket")
 		implementation("org.springframework.boot:spring-boot-starter-webflux")
-		implementation("com.graphql-java-kickstart:graphql-spring-boot-starter:7.1.0-SNAPSHOT")
-		implementation("com.graphql-java-kickstart:graphiql-spring-boot-starter:7.1.0-SNAPSHOT")
-		implementation("com.graphql-java-kickstart:altair-spring-boot-starter:7.1.0-SNAPSHOT")
-		implementation("com.graphql-java-kickstart:voyager-spring-boot-starter:7.1.0-SNAPSHOT")
+		implementation("com.graphql-java-kickstart:graphql-spring-boot-starter:7.1.0")
+		implementation("com.graphql-java-kickstart:graphiql-spring-boot-starter:7.1.0")
+		implementation("com.graphql-java-kickstart:altair-spring-boot-starter:7.1.0")
+		implementation("com.graphql-java-kickstart:voyager-spring-boot-starter:7.1.0")
 		implementation("com.expediagroup:graphql-kotlin-schema-generator:2.0.0-RC12.1")
 
 		implementation project(":app-api")
@@ -246,7 +250,7 @@ project(":infra-graphql") {
 			exclude module: "junit"
 			exclude group: "org.junit.vintage", module: "junit-vintage-engine"
 		}
-		testImplementation("com.graphql-java-kickstart:graphql-spring-boot-starter-test:7.1.0-SNAPSHOT"){
+		testImplementation("com.graphql-java-kickstart:graphql-spring-boot-starter-test:7.1.0"){
 			exclude module: "junit"
 			exclude group: "org.junit.vintage", module: "junit-vintage-engine"
 		}
@@ -326,9 +330,9 @@ project(":main") {
 			exclude module: "junit"
 			exclude group: "org.junit.vintage", module: "junit-vintage-engine"
 		}
-		testImplementation("io.kotest:kotest-runner-junit5-jvm:4.0.5")
-		testImplementation("io.kotest:kotest-assertions-core-jvm:4.0.5")
-		testImplementation("io.kotest:kotest-property-jvm:4.0.5")
+		testImplementation("io.kotest:kotest-runner-junit5-jvm:4.2.0")
+		testImplementation("io.kotest:kotest-assertions-core-jvm:4.2.0")
+		testImplementation("io.kotest:kotest-property-jvm:4.2.0")
 	}
 }
 
