fix gitlab k8s integration

--- a/main/src/main/resources/k8s/poker.yaml
+++ b/main/src/main/resources/k8s/poker.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: poker
   annotations:
-    app.gitlab.com/app: "poker"
+    app.gitlab.com/app: "tripled-poker"
     app.gitlab.com/env: "production"
   labels:
     app: production
