--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
 	ext {
-		kotlinVersion = "1.4.0"
+		kotlinVersion = "1.6.20"
 		springBootVersion = "2.3.3.RELEASE"
 		junitVersion = "5.6.2"
 	}
-    ext["kotlin.version"] = "1.4.0"
+    ext["kotlin.version"] = "1.5.31"
 
     repositories {
 		mavenCentral()
@@ -30,7 +30,7 @@ plugins {
 	id "jacoco"
 	id "io.gitlab.arturbosch.detekt" version "1.8.0"
 	id("com.github.node-gradle.node") version "2.2.0"
-	id "com.gorylenko.gradle-git-properties" version "2.2.2"
+//	id "com.gorylenko.gradle-git-properties" version "2.2.2"
 
 }
 
@@ -309,7 +309,7 @@ project(":infra-mongostore") {
 
 // main partition
 project(":main") {
-	apply plugin: "com.gorylenko.gradle-git-properties"
+	//apply plugin: "com.gorylenko.gradle-git-properties"
 	apply plugin: "org.springframework.boot"
 
 	dependencies {
